# FiltrationOnePhase

./: .gitignore  CMakeLists.txt  main.cpp  tmp.cpp
data/: box_cube.vtk  example.txt
model/: darcy_one_phase.cpp  darcy_one_phase.h  one_phase_model.cpp  one_phase_model.h
solver/: solver.cpp  solver.h
utils/calculations/: calculations.cpp  calculations.h
utils/grid_gen/: CMakeLists.txt
utils/params/: params.cpp  params.h
